<resources>
    <string name="app_name">Surgut culture</string>
    <string name="app_label">Сургут.Культурный</string>
    <!-- Strings used for setting -->
    <string name="database_name">database-surgutculture</string>

    <string name="title_activity_near">NearActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="name">Name</string>
    <string name="whatNear">Что рядом?</string>
    <string name="map_button">На карте</string>
    <string name="map_button_description">На карте %s</string>
    <string name="map_zoom">Нажмите на карту для увеличения</string>
    <string name="cityHistory">История города</string>
    <string name="byInterest">По интересам</string>
    <string name="activeSurgut">Активный Сургут</string>
    <string name="button_detail">Подробнее…</string>
    <string name="button_detail_description">Подробнее… %s</string>
    <string name="selected_period">Выбранный период</string>
    <string name="distance_meters">%d метров</string>
    <string name="distance_kms">%d километров</string>
    <string name="version_info">%s v.%s.%d.%d</string>
    <string name="update_location_button">Обновить местоположение</string>
    <string name="cycleroute_road">Тип дороги: %s</string>
    <string name="cycleroute_complex">Уровень сложности: %d из 5</string>
    <string name="cycleroute_distance">Дистанция: %d км</string>
    <string name="impossible_find_map_application">К сожалению, на вашем устройстве не установлено приложение для показа на карте</string>
    <string name="impossible_find_browser_application">К сожалению, на вашем устройстве не возможно открыть приложение для просмотра web-страниц</string>
    <string name="impossible_seek_location">К сожалению, приложение не сможет определить Ваше местоположение</string>
    <string name="impossible_seek_location_not_yet">Подождите, пока устройства определит Ваше местоположение</string>
    <string name="impossible_first_update">Для первого запуска приложения нужен доступ к сети Интернет</string>
    <string name="seek_location_in_process">Местоположение определяется"</string>
    <string name="history_period_1">1594 – 1708. Сургут - острог, населённый казаками и стрельцами. Часть Томского разряда.</string>
    <string name="history_period_2">1708 – 1877. Петром определён к сибирской губернии. Место ссылки бунтовщиков.</string>
    <string name="history_period_3">1877 – 1918. Активное развитие города. Строительство казачьих школ, училищ, библиотек. Создан герб с чёрно-бурой лисой.</string>
    <string name="history_period_4">1918 – 1930. Кулачьи мятежи, гражданская война. Построена консервная фабрика, являющияся первым объектом промышленности.</string>
    <string name="history_period_5">1931 – 1963. Сургут лишился статуса города. Развитие лесной и рыбной промышленности в поселке. Великая отечественная война. Практически всё взрослое население ушло на войну, половина не вернулось.</string>
    <string name="history_period_6">1964 – наши дни. Найдена нефть и началась активная её разработка. Были построены железнодорожные узлы, Обский мост, ГРЭС 1 и самая мощная ТЭС на континенте - ГРЭС 2. В 1997 была добыта миллиардная тонна нефти.</string>
    <string name="history_linked_object_title">Объекты в городе, связанные с этим событием:</string>
    <string name="velorouts_title">Сургутские веломаршруты</string>
    <string name="rent_sport_title">Пункты проката:</string>
    <string name="search_button">Найти</string>
    <string name="home_button">Главная страница</string>
    <string name="search_hint">Введите строку для поиска</string>
    <string name="search_description">Поиск объектов по наименованиям, тегам, категориям</string>
    <string name="search_not_found">Ничего не найдено</string>
    <string name="search_location_enabled">Местоположение определено (%1$.5f, %2$.5f)</string>
    <string name="search_location_updated">Местоположение обновлено (%1$.5f, %2$.5f)</string>
    <string name="sort_by_difficulty_button">По сложности</string>
    <string name="sort_by_distance_button">По длине</string>
    <string name="search_distance_title">Выберите расстояние от Вашего местонахождения для поиска</string>
    <string name="cycle_tab_info">Описание</string>
    <string name="cycle_tab_checkpoints">Чекпоинты</string>
    <string name="cycle_tab_cultobjects">Объекты культуры</string>
    <string name="update_text">Обновление данных о культурных объектах</string>
    <string name="update_images_text">Загрузка изображений (%d из %d)</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>