<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <item
        android:id="@+id/miHome"
        android:contentDescription="home"
        android:icon="@drawable/ic_baseline_home_24"
        app:showAsAction="always"
        android:title="">
    </item>
    <item
        android:id="@+id/miSearch"
        android:contentDescription="search  "
        android:icon="@drawable/ic_baseline_search_24"
        app:showAsAction="always"
        android:title="">
    </item>
    <item
        android:id="@+id/miNear"
        android:icon="@drawable/ic_baseline_near_me_24"
        app:showAsAction="never|withText"
        android:title="@string/whatNear">
    </item>
    <item
        android:id="@+id/miInterest"
        android:icon="@drawable/ic_baseline_category_24"
        app:showAsAction="never|withText"
        android:title="@string/byInterest">
    </item>
    <item
        android:id="@+id/miActive"
        android:icon="@drawable/ic_baseline_directions_bike_24"
        app:showAsAction="never|withText"
        android:title="@string/activeSurgut">
    </item>
    <item
        android:id="@+id/miHistory"
        android:icon="@drawable/ic_baseline_history_edu_24"
        app:showAsAction="never|withText"
        android:title="@string/cityHistory">
    </item>
</menu>